# synthy

./: Cargo.toml
src/: editor.rs  lib.rs  params.rs
